--- a/.github/workflows/hexodeploy.yml
+++ b/.github/workflows/hexodeploy.yml
@@ -1,55 +1,91 @@
-name: GitHub Actions Build and Deploy
+name: CI
 on:
   push:
     branches:
-    - main    
-    - master
-
+      - hexo
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-    - name: git checkout...
-      uses: actions/checkout@v1
+      - name: Checkout source
+        uses: actions/checkout@v1
+        with:
+          ref: hexo
+      - name: Use Node.js ${{ matrix.node_version }}
+        uses: actions/setup-node@v1
+        with:
+          version: ${{ matrix.node_version }}
+      - name: Setup hexo
+        env:
+          ACTION_DEPLOY_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$ACTION_DEPLOY_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          git config --global user.email "2846154596@qq.com"
+          git config --global user.name "xhlu"
+          npm install hexo-cli -g
+          npm install
+      - name: Hexo deploy
+        run: |
+          hexo clean
+          hexo g
+          hexo d
 
-    - name: setup nodejs...
-      uses: actions/setup-node@v1
 
-    - name: install hexo...
-      run: |
-        npm install hexo-cli -g  --registry https://registry.npm.taobao.org
+# name: GitHub Actions Build and Deploy
+# on:
+#   push:
+#     branches:
+#     - main    
+#     - master
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: git checkout...
+#       uses: actions/checkout@v1
+
+#     - name: setup nodejs...
+#       uses: actions/setup-node@v1
+
+#     - name: install hexo...
+#       run: |
+#         npm install hexo-cli -g  --registry https://registry.npm.taobao.org
         
-    - name: install hexo-wordcount...
-      run: | 
-        npm i --save hexo-wordcount -g  --registry https://registry.npm.taobao.org 
+#     - name: install hexo-wordcount...
+#       run: | 
+#         npm i --save hexo-wordcount -g  --registry https://registry.npm.taobao.org 
 
-    - name: install hexo-deployer-git...
-      run: |
-        npm install --save hexo-deployer-git  --registry https://registry.npm.taobao.org
+#     - name: install hexo-deployer-git...
+#       run: |
+#         npm install --save hexo-deployer-git  --registry https://registry.npm.taobao.org
 
-    - name: install npm depandence...
-      run: |
-        npm install --registry https://registry.npm.taobao.org
+#     - name: install npm depandence...
+#       run: |
+#         npm install --registry https://registry.npm.taobao.org
 
-    - name: hexo clean and gen HTML...
-      run: |
-        hexo clean
-        hexo g
+#     - name: hexo clean and gen HTML...
+#       run: |
+#         hexo clean
+#         hexo g
 
-    - name: git remote -v ...
-      run: |
-        git remote -v
-        ls -al 
-        tree ./public
+#     - name: git remote -v ...
+#       run: |
+#         git remote -v
+#         ls -al 
+#         tree ./public
 
-    # Deploy hexo blog website.
-    - name: Deploy # step4
-      id: deploy
-      uses: sma11black/hexo-action@v1.0.0
-      with:
-        deploy_key: ${{ secrets.SSH_PRIVATE_KEY }}
-        user_name: xhlu
-        user_email: 2846154596@qq.com
+#     - name: Deploy # step4
+#       id: deploy
+#       uses: sma11black/hexo-action@v1.0.0
+#       with:
+#         deploy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+#         user_name: xhlu
+#         user_email: 2846154596@qq.com
 
     # - name: Commit files
     #   run: |
