--- a/.github/workflows/hexodeploy.yml
+++ b/.github/workflows/hexodeploy.yml
@@ -30,11 +30,16 @@ jobs:
           npm install hexo-cli -g --registry https://registry.npm.taobao.org
           npm install --save hexo-deployer-git --registry https://registry.npm.taobao.org
           npm install
-      - name: Hexo deploy
-        run: |
           hexo clean
           hexo g
-          hexo d
+          cd ../
+          git clone https://github.com/luxinhua/luxinhua.github.io.git
+          cd luxinhua.github.io
+          rm -rf * 
+          cp -rf ../blog/public/* .
+          git add .
+          git commit -m "update article"
+          git push -u origin master 
 
 
 # name: GitHub Actions Build and Deploy
