update source code.

--- a/.github/workflows/hexodeploy.yml
+++ b/.github/workflows/hexodeploy.yml
@@ -42,7 +42,8 @@ jobs:
           cp -rf ../public/* .
           git add .
           git commit -m "update article"
-          git push -u origin master 
+          git push 
+# origin master 
 
 
 # name: GitHub Actions Build and Deploy
