--- a/.github/workflows/hexodeploy.yml
+++ b/.github/workflows/hexodeploy.yml
@@ -13,10 +13,14 @@ jobs:
         uses: actions/checkout@v1
         with:
           ref: master
+
+
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
           version: ${{ matrix.node_version }}
+
+
       - name: Setup hexo
         env:
           ACTION_DEPLOY_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -38,12 +42,12 @@ jobs:
           git clone https://github.com/luxinhua/luxinhua.github.io.git
           cd luxinhua.github.io
           git remote rm origin
-          git remote add origin https://luxinhua:$GITHUB_TOKEN@github.com/luxinhua/luxinhua.github.io.git
+          git remote add origin https://github.com/luxinhua/luxinhua.github.io.git
           git remote set-url origin https://github.com/luxinhua/luxinhua.github.io.git 
           rm -rf * 
           cp -rf ../public/* .
           git add .
-          git commit -m "update article"
+          git commit -m now('YYYY-MM-DD HH:mm:ss')
           git push origin master
 
 # name: GitHub Actions Build and Deploy
