--- a/themes/Hacker/_config.yml
+++ b/themes/Hacker/_config.yml
@@ -1,8 +1,8 @@
 menu:
   Home: /
   Archives: /archives
-  Categories: /categories
-  Tags: /tags
+  # Categories: /categories
+  # Tags: /tags
 
 # gitment
 gitment: false
