--- a/.github/workflows/hexodeploy.yml
+++ b/.github/workflows/hexodeploy.yml
@@ -47,8 +47,8 @@ jobs:
           rm -rf .git
           git clone https://github.com/luxinhua/luxinhua.github.io.git
           cd luxinhua.github.io
-          git remote rm origin
-          git remote add origin git@github.com:luxinhua/luxinhua.github.io.git
+          # git remote rm origin
+          # git remote add origin git@github.com:luxinhua/luxinhua.github.io.git
           git remote set-url origin git@github.com:luxinhua/luxinhua.github.io.git
           rm -rf * 
           cp -rf ../public/* .
