--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -184,7 +184,7 @@ fb_app_id:
 # profile
 profile:
   enabled: true # Whether to show profile bar
-  avatar: images/avatar.jpg
+  avatar: images/cat.jpeg # avatar.jpg
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
   author: xhlu
   author_title: 嵌入式开发
