--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -31,9 +31,9 @@ site:
     width: 40
     height: 40
     url: ../images/logo.png
-  title: xhlu # 页面title
+  title: 嵌入式 # 页面title
   favicon: /favicon.png
-  board: <p>欢迎交流与分享经验!</p> # 站点公告
+  board: <p>个人站还在更新中 ！</p> # 站点公告
   copyright: false # 底部版权信息
 
 # config
@@ -59,7 +59,7 @@ widgets:
   - board  
   - category
   - tag
-  - tagcloud
+  # - tagcloud
   - archive
   - recent_posts
 
