--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -2,8 +2,8 @@
 menu:
   Home: .
   Archives: archives  # 归档
-  Categories: categories  # 分类
-  Tags: tags  # 标签
+  # Categories: categories  # 分类
+  # Tags: tags  # 标签
   # Repository: repository  # github repositories
   # Books: books  # 豆瓣书单
   # Links: links  # 友链
@@ -14,8 +14,8 @@ menu_icons:
   enable: true  # 是否启用导航菜单图标
   home: icon-home-fill
   archives: icon-archives-fill
-  categories: icon-folder-fill
-  tags: icon-tags-fill
+  categories: icon-folder
+  tags: icon-tags
   repository: icon-project
   books: icon-book-fill
   links: icon-friendship
